--- a/src/components/InfoPanel/InfoPanel.scss
+++ b/src/components/InfoPanel/InfoPanel.scss
@@ -1,7 +1,7 @@
 @import "../../scss/colors";
 @import "../../scss/box-shadow";
 .info-panel {
-  z-index: 1000;
+  z-index: 0;
   position: relative;
   margin: 0 0 1rem 0;
   padding: 0px;
