--- a/src/components/ListPanel/ListPanel.scss
+++ b/src/components/ListPanel/ListPanel.scss
@@ -1,7 +1,7 @@
 @import "../../scss/colors";
 @import "../../scss/box-shadow";
 .list-panel {
-  z-index: 1000;
+  z-index: 0;
   margin: 0 0 1rem 0;
   padding: 0px;
   background-color: white;
